--- a/css/style.css
+++ b/css/style.css
@@ -16,437 +16,23 @@ a {
   border-radius: 20px;
   width: 20px;
 }
-/*
-.head__fotoyo {
-  width: 10vw; }
-
-@media only screen and (min-width: 769px) and (max-width: 990px) {
-  .head__fotoyo {
-    width: 15vw; } }
-
-@media only screen and (max-width: 768px) {
-  div.head__nav ul {
-    font-size: 16px; }
-  .head__fotoyo {
-    width: 20vw; } }
-
-.foot {
-  height: max-content;
-  background-image: url(../images/verde1.jpg);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: fixed;
-  align-content: center; }
-  .foot p {
-    margin-right: 5px;
-    color: white; }
-
-.foot__nav, .foot__navrrss {
-  list-style-type: none;
-  font-size: 18px;
-  text-shadow: 0 0 2px black;
-  align-items: center;
-  justify-content: space-between; }
-  .foot__nav li, .foot__navrrss li {
-    background-color: rgba(255, 255, 255, 0.4);
-    border-radius: 20px;
-    font-weight: bold;
-    margin: 15px 0; }
-
-.foot__navrrss ul {
-  display: flex;
-  justify-content: flex-end; }
-  .foot__navrrss ul li {
-    padding: 5px; }
-
-@media only screen and (max-width: 768px) {
-  .foot__nav, .foot__navrrss {
-    font-size: 18px;
-    display: block; } }
-
-.head__logonatura {
-  width: 10vw; }
-
-iframe {
-  width: 30vw;
-  height: 20vw;
-  border-radius: 20px;
-  padding: 5px; }
-
-.causas__whycontent1, section.online__introcupones, section.online__linkexterno, .causas__whycontent2 {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  background-image: url(../images/fondocausas.png);
-  border-radius: 20px;
-  margin: 10px 0; }
-
-div.causas__intro {
-  border: 10px double #F53D00;
-  border-radius: 20px;
-  font-weight: bold;
-  font-size: 18px;
-  margin-top: 15px; }
-  div.causas__intro p {
-    margin-bottom: 0;
-    margin-top: 5px; }
-
-h1 {
-  color: #F53D00;
+.btncarrito {
+  border: 2px grey solid;
+  border-radius: 50px;
+  padding: 10px;
   font-size: 48px;
-  text-shadow: 0 0 2px black; }
-
-div article.causas__whytxt1, div article.causas__whytxt2 {
-  width: 50%;
+}
+.row {
+  margin: 40px 0;
   text-align: center;
-  align-items: center;
-  font-size: 18px;
-  font-style: italic;
-  font-weight: bold; }
-
-@media only screen and (min-width: 769px) and (max-width: 990px) {
-  .head__logonatura {
-    width: 15vw; } }
-
-@media only screen and (max-width: 768px) {
-  .causas__whycontent1, section.online__introcupones, section.online__linkexterno, .causas__whycontent2 {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: 10px 0; }
-  div article.causas__whytxt1, div article.causas__whytxt2 {
-    width: 80%;
-    text-align: center;
-    align-items: center;
-    font-size: 18px; }
-  iframe {
-    width: min-content; }
-  .head__logonatura {
-    width: 20vw; } }
-
-.cicloactual__link img {
-  margin-top: 15px;
-  border: 2px solid #F53D00;
-  border-radius: 20px;
-  text-align: center; }
-  .cicloactual__link img:hover {
-    box-shadow: 10px 5px 5px black; }
-
-.cicloactual__titulo {
-  grid-area: titulo;
-  justify-self: left;
-  text-shadow: 0 0 2px black; }
-
-.cicloactual__imperdibles img {
-  margin: 10px; }
-
-.carousel-control-prev-icon {
-  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23F53D00' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E"); }
-
-.carousel-control-next-icon {
-  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23F53D00' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E"); }
-
-.contacto__intro {
-  font-size: 18px; }
-
-.contacto__formulario {
-  background-color: rgba(245, 61, 0, 0.5);
-  border: rgba(245, 61, 0, 0.5) solid 2px;
-  border-radius: 20px;
-  margin: 30px 0; }
-
-.button {
-  border: #F53D00 solid 2px;
-  background-color: #F53D00; }
-  .button:hover {
-    font-weight: bold;
-    font-size: 16px;
-    border: 2px solid #F53D00;
-    border-radius: 20px;
-    background-color: #F53D00; }
-
-.online__introcasa h1 {
-  margin-bottom: 0ch;
-  margin-top: 20px;
-  padding-top: 20px;
-  margin-left: 400px;
-  text-shadow: 1px 1px 2px black; }
-
-.online__introcasa p {
-  margin: 20px;
+}
+form {
+  border: 2px white solid;
   padding: 15px;
-  border: outset 3px rgba(245, 61, 0, 0.5);
-  border-radius: 20px; }
-
-.online__introcupones h3, .online__introcupones p {
-  margin-left: 25px; }
-
-section.online__introcupones, section.online__linkexterno {
-  border-radius: 150px;
-  margin: 15px;
-  padding: 25px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center; }
-  section.online__introcupones a, section.online__linkexterno a {
-    font-size: 32px; }
-
-@media only screen and (max-width: 410px) {
-  .online__introcasa p {
-    margin: 0;
-    padding: 0; } }
-
-.pronta__intro {
-  text-align: center; }
-  .pronta__intro p {
-    font-weight: bold;
-    border: 2px solid #F53D00;
-    border-radius: 20px;
-    padding: 15px;
-    font-size: 24px;
-    margin: 5px; }
-
-h2.galeria__titulo {
-  margin: 20px;
-  font-size: 32px;
-  text-decoration: underline;
-  color: #F53D00; }
-
-.card {
-  background-color: rgba(245, 61, 0, 0.2);
-  text-align: center; }
-  .card h5 {
-    font-weight: bold; }
-  .card img {
-    margin-top: 10px; }
-
-.remate {
-  font-size: 48px;
-  border: 2px solid #F53D00;
   border-radius: 20px;
-  width: 50%;
-  margin: 10px 0;
-  background-color: #F53D00;
-  justify-content: center; }
-  .remate a {
-    color: white; }
-
-.rematetxt {
-  font-weight: bold;
-  font-size: 24px;
-  margin: 5px; }
-
-@media only screen and (min-width: 769px) and (max-width: 990px) {
-  .card img {
-    width: 40vw;
-    margin-left: auto;
-    margin-right: auto; } }
-
-@media only screen and (max-width: 768px) {
-  .pronta__intro p {
-    font-size: 18px; }
-  .link__remate {
-    font-size: 18px;
-    padding: 10px; }
-  .card img {
-    width: 40vw;
-    margin-left: auto;
-    margin-right: auto; } }
-
-.headerg {
-  background: rgba(0, 0, 0, 0.12) url(../images/verde1.jpg);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: fixed;
-  background-blend-mode: multiply;
-  display: flex;
-  align-items: center;
-  height: 35vh; }
-  .headerg img {
-    width: 10vw;
-    margin: 1vw 5vw; }
-
-.navppalg ul, .navg ul, .navrrssg ul {
-  font-size: 24px;
-  text-shadow: 0 0 1px black;
-  display: flex; }
-  .navppalg ul li, .navg ul li, .navrrssg ul li {
-    background-color: rgba(255, 255, 255, 0.4);
-    border-radius: 20px;
-    font-weight: bold;
-    margin: 15px 0;
-    list-style: none;
-    padding: 10px; }
-
-.navppalg a, .navg a, .navrrssg a {
-  color: #F53D00;
-  text-decoration: none; }
-  .navppalg a:hover, .navg a:hover, .navrrssg a:hover {
-    color: #F53D00;
-    font-style: italic; }
-
-.footg {
-  height: max-content;
-  background-image: url(../images/verde1.jpg);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: fixed;
-  margin-top: 15px; }
-  .footg p {
-    margin-right: 5px;
-    color: white; }
-
-.linkpronta {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-content: flex-start; }
-  .linkpronta ul {
-    margin: 0;
-    font-size: 18px; }
-
-.navrrssg {
-  margin-right: 2vw; }
-  .navrrssg li {
-    padding: 5px !important; }
-
-.copyg {
-  display: flex;
-  justify-content: flex-end; }
-
-.galeriag {
-  display: grid;
-  grid-template-areas: "titulo titulo . ." "parrafo parrafo parrafo parrafo" "oferta1 oferta2 oferta3 oferta4" "oferta5 oferta6 oferta7 oferta8" "oferta9 oferta10 oferta11 oferta12" "oferta13 oferta14 oferta15 oferta16";
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-rows: 4% 6% 22% 22% 22% 22%; }
-
-.titulog {
-  grid-area: titulo;
-  margin-top: 10px; }
-
-.parrafog {
-  grid-area: parrafo;
-  align-content: center;
-  margin: 20px 0;
-  font-size: 24px;
-  font-weight: bold;
-  text-align: center; }
-
-.oferta01, .oferta02, .oferta03, .oferta04, .oferta05, .oferta06, .oferta07, .oferta08, .oferta09, .oferta10, .oferta11, .oferta12, .oferta13, .oferta14, .oferta15, .oferta16 {
-  grid-area: oferta1;
-  text-align: center;
-  background-color: rgba(245, 61, 0, 0.2);
-  border-radius: 5px;
-  border: 1px solid rgba(0, 0, 0, 0.125); }
-  .oferta01 img, .oferta02 img, .oferta03 img, .oferta04 img, .oferta05 img, .oferta06 img, .oferta07 img, .oferta08 img, .oferta09 img, .oferta10 img, .oferta11 img, .oferta12 img, .oferta13 img, .oferta14 img, .oferta15 img, .oferta16 img {
-    width: 17vw;
-    box-shadow: 10px 5px 5px #F53D00;
-    margin-top: 10px; }
-  .oferta01 h5, .oferta02 h5, .oferta03 h5, .oferta04 h5, .oferta05 h5, .oferta06 h5, .oferta07 h5, .oferta08 h5, .oferta09 h5, .oferta10 h5, .oferta11 h5, .oferta12 h5, .oferta13 h5, .oferta14 h5, .oferta15 h5, .oferta16 h5 {
-    font-size: 16px; }
-  .oferta01 a, .oferta02 a, .oferta03 a, .oferta04 a, .oferta05 a, .oferta06 a, .oferta07 a, .oferta08 a, .oferta09 a, .oferta10 a, .oferta11 a, .oferta12 a, .oferta13 a, .oferta14 a, .oferta15 a, .oferta16 a {
-    color: white;
-    text-decoration: none;
-    font-weight: bold;
-    border-radius: 10px;
-    padding: 0.375rem 0.75rem;
-    font-size: 1rem;
-    line-height: 1.5;
-    border-radius: 0.25rem;
-    margin: 5px; }
-
-.oferta02 {
-  grid-area: oferta2; }
-
-.oferta03 {
-  grid-area: oferta3; }
-
-.oferta04 {
-  grid-area: oferta4; }
-
-.oferta05 {
-  grid-area: oferta5; }
-
-.oferta06 {
-  grid-area: oferta6; }
-
-.oferta07 {
-  grid-area: oferta7; }
-
-.oferta08 {
-  grid-area: oferta8; }
-
-.oferta09 {
-  grid-area: oferta9; }
-
-.oferta10 {
-  grid-area: oferta10; }
-
-.oferta11 {
-  grid-area: oferta11; }
-
-.oferta12 {
-  grid-area: oferta12; }
-
-.oferta13 {
-  grid-area: oferta13; }
-
-.oferta14 {
-  grid-area: oferta14; }
-
-.oferta15 {
-  grid-area: oferta15; }
-
-.oferta16 {
-  grid-area: oferta16; }
-
-@media only screen and (min-width: 769px) and (max-width: 990px) {
-  .galeriag {
-    grid-template-areas: "titulo titulo" "parrafo parrafo" "oferta1 oferta2" "oferta3 oferta4" "oferta5 oferta6" "oferta7 oferta8" "oferta9 oferta10" "oferta11 oferta12" "oferta13 oferta14"  "oferta15 oferta16";
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 50px 110px repeat(8, 350px); }
-  .oferta01 img, .oferta02 img, .oferta03 img, .oferta04 img, .oferta05 img, .oferta06 img, .oferta07 img, .oferta08 img, .oferta09 img, .oferta10 img, .oferta11 img, .oferta12 img, .oferta13 img, .oferta14 img, .oferta15 img, .oferta16 img {
-    width: 25vw; } }
-
-@media only screen and (max-width: 768px) {
-  .galeriag {
-    grid-template-areas: "titulo" "parrafo" "oferta1" "oferta2" "oferta3" "oferta4" "oferta5" "oferta6" "oferta7"  "oferta8" "oferta9" "oferta10" "oferta11"  "oferta12" "oferta13" "oferta14"  "oferta15"  "oferta16";
-    grid-template-columns: 1fr;
-    grid-template-rows: 50px 150px repeat(16, 400px); }
-  .oferta01, .oferta02, .oferta03, .oferta04, .oferta05, .oferta06, .oferta07, .oferta08, .oferta09, .oferta10, .oferta11, .oferta12, .oferta13, .oferta14, .oferta15, .oferta16 {
-    width: 320px;
-    margin-left: auto;
-    margin-right: auto; }
-    .oferta01 img, .oferta02 img, .oferta03 img, .oferta04 img, .oferta05 img, .oferta06 img, .oferta07 img, .oferta08 img, .oferta09 img, .oferta10 img, .oferta11 img, .oferta12 img, .oferta13 img, .oferta14 img, .oferta15 img, .oferta16 img {
-      width: 35vw; } }
-
-@media only screen and (max-width: 578px) {
-  .headerg img {
-    width: 20vw; }
-  .navppalg ul, .navg ul, .navrrssg ul {
-    font-size: 16px;
-    display: inline-block; }
-  .galeriag {
-    grid-template-rows: 50px 200px repeat(16, 350px); }
-  .oferta01, .oferta02, .oferta03, .oferta04, .oferta05, .oferta06, .oferta07, .oferta08, .oferta09, .oferta10, .oferta11, .oferta12, .oferta13, .oferta14, .oferta15, .oferta16 {
-    width: 300px;
-    margin-left: auto;
-    margin-right: auto; }
-    .oferta01 img, .oferta02 img, .oferta03 img, .oferta04 img, .oferta05 img, .oferta06 img, .oferta07 img, .oferta08 img, .oferta09 img, .oferta10 img, .oferta11 img, .oferta12 img, .oferta13 img, .oferta14 img, .oferta15 img, .oferta16 img {
-      width: 38vw; } }
-
-@media only screen and (max-width: 410px) {
-  .titulog {
-    font-size: 32px; }
-  .parrafog {
-    font-size: 18px; }
-  .galeriag {
-    grid-template-rows: 50px 200px repeat(16, 300px); }
-  .oferta01, .oferta02, .oferta03, .oferta04, .oferta05, .oferta06, .oferta07, .oferta08, .oferta09, .oferta10, .oferta11, .oferta12, .oferta13, .oferta14, .oferta15, .oferta16 {
-    width: 200px; } }
-    */
+}
+.card {
+  background-color: black;
+  border: 2px white solid;
+  border-radius: 20px;
+}
