--- a/css/style.css
+++ b/css/style.css
@@ -9,12 +9,18 @@ a {
   a:hover {
     color: white;
     font-style: italic; }
-
+h1 {
+  text-align: end;
+}
 .linkwa {
   border: 2px white solid;
   background-color: white;
   border-radius: 20px;
   width: 20px;
+}
+.linktxt {
+  color: black;
+  font-size: 20px;
 }
 .btncarrito {
   border: 2px grey solid;
@@ -25,12 +31,14 @@ a {
 .btn-primary {
   background-color: white;
   border: 2px solid white;
+  color: black;
+  font-weight: bolder;
 }
 .row {
   margin: 40px 0;
   text-align: center;
 }
-form {
+form, .contenedor-carro {
   border: 2px white solid;
   padding: 15px;
   border-radius: 20px;
@@ -39,6 +47,7 @@ form {
   background-color: black;
   border: 2px white solid;
   border-radius: 20px;
+  margin-left: 35px!important
 }
 .entradaCantidadCarro {
   width: 3vw;
@@ -58,4 +67,14 @@ form {
 }
 li {
   list-style: none;
+}
+.contenedor-carro {
+  position: relative;
+  width: 40vw;
+}
+.swal2-image{
+  width: 200px;
+}
+.modal-title, .modal-body {
+  color: black;
 }
